TestSuite/errors/err0093.pas
type TClass = class
constructor Create; abstract;
end;

TClass2 = class(TClass)
end;

var t : TClass;

begin
end.